Fix some views where articles are hidden behind marquee

--- a/sugarcrm/styleguide/css/bootstrap-mobile.css
+++ b/sugarcrm/styleguide/css/bootstrap-mobile.css
@@ -3996,9 +3996,6 @@ html {
   height: 45px;
   display: inline-block;
 }
-#detailListing #listing {
-  height: 40% !important;
-}
 #listing article {
   -webkit-transition: all 0.25s ease-in-out;
 }
@@ -4007,6 +4004,14 @@ html {
 }
 #listing article.nav {
   margin-bottom: 0;
+}
+#listing > i {
+  height: 45px;
+  display: inline-block;
+}
+#detailListing #listing > i {
+  height: 218px;
+  display: inline-block;
 }
 .navbar [class^="icon-"] {
   color: #ffffff;
