--- a/sugarcrm/styleguide/less/sugarmobile.less
+++ b/sugarcrm/styleguide/less/sugarmobile.less
@@ -357,13 +357,9 @@ html {
   display: block;
 }
 
-#listing>i {
+#listing > i {
   height:45px;
   display:inline-block;
-}
-
-#detailListing #listing {
-  height: 40% !important;
 }
 
 #listing article {
@@ -376,6 +372,16 @@ html {
 
 #listing article.nav {
     margin-bottom: 0;
+}
+
+#listing > i {
+  height: 45px;
+  display: inline-block;
+}
+
+#detailListing #listing > i {
+  height: 218px;
+  display: inline-block;
 }
 
 .navbar [class^="icon-"] {
